--- a/src/SpawnTraffic.IntegrationTest/SpawnTraffic.IntegrationTest.csproj
+++ b/src/SpawnTraffic.IntegrationTest/SpawnTraffic.IntegrationTest.csproj
@@ -7,15 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="moq" Version="4.10.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SpawnTraffic.LoggerManager\SpawnTraffic.LoggerManager.csproj" />
-    <ProjectReference Include="..\SpawnTraffic.Workflow\SpawnTraffic.Workflow.csproj" />
+    <ProjectReference Include="..\SpawnTraffic.DatabaseLogger\SpawnTraffic.DatabaseLogger.csproj" />
+    <ProjectReference Include="..\SpawnTraffic.Logger\SpawnTraffic.Logger.csproj" />
   </ItemGroup>
 
 </Project>
