--- a/src/SpawnTraffic.AppCmd/appsettings.json
+++ b/src/SpawnTraffic.AppCmd/appsettings.json
@@ -1,6 +1,10 @@
 ﻿{
-  "log4NetConfig": "Configs/log4net.config",
   "Redis": {
     "ConnectionString": "localhost,defaultDatabase=2,syncTimeout=5000,connectTimeout=5000,abortConnect=False"
-  }
+  },
+  "Logger": {
+    "PluginFolder": "Plugins",
+    "LogConnection": "Server=localhost\\SQLExpress;Database=SpawnTraffic;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Log4NetConfig": "Configs/log4net.config"
+  } 
 }
